[package]
name = "common-library"
version = "0.1.1"
authors = ["dawn"]
edition = "2021"
description = "Rust common library"
license = "Apache-2.0"
repository = "https://github.com/kyoodong/rust-common-library"

[dependencies]
cosmwasm-std = { version = "2.1.4", features = ["cosmwasm_2_1"] }
cosmwasm-schema = { version = "2.1.4" }
serde = { version = "1.0.139", default-features = false, features = ["derive"] }
schemars = "0.8.10"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true